new files and images added 3

--- a/report_july_15_2014.html
+++ b/report_july_15_2014.html
@@ -1243,7 +1243,7 @@ containing <strong>6878</strong> change requests</li>
 <ul>
 <li><p>Graph: Categorization By <strong>Change Request Per Day</strong> (change_request_day.xsls)</p></li>
 <li><p><strong>First Graph Representation</strong></p></li>
-</ul><p><a href="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_1.jpg" style="max-width:100%;"></a></p>
+</ul><p><a href="https://camo.githubusercontent.com/6ff29d4025e23068a843244fda0911a8f002172d/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/6ff29d4025e23068a843244fda0911a8f002172d/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/change_req_per_day_1.jpg" style="max-width:100%;"></a></p>
 
 <ul>
 <li><strong>Second Graph Representation</strong></li>
@@ -1251,7 +1251,7 @@ containing <strong>6878</strong> change requests</li>
 
 <ul>
 <li><strong>Third Graph Representation</strong></li>
-</ul><p><a href="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_3.jpg" style="max-width:100%;"></a></p>
+</ul><p><a href="https://camo.githubusercontent.com/742cb69bb503371a45605918d6559daa0a26f410/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f332e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/742cb69bb503371a45605918d6559daa0a26f410/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f332e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/change_req_per_day_3.jpg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1424,7 +1424,7 @@ they are then grouped by stage and size</p></li>
 
 <hr><p>Total Unique Failing Test Suites (executions) (unique_tot_faling_test_suites.sql)</p>
 
-<hr><p><img class="emoji" title=":bulb:" alt=":bulb:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4a1.png" height="20" width="20" align="absmiddle"><strong>NOTE:</strong></p>
+<hr><p><img class="emoji" title=":bulb:" alt=":bulb:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4a1.png" height="20" width="20" align="absmiddle"> **NOTE:**g</p>
 
 <ul>
 <li>There are total of 358 unique test suites for both stages.</li>
