--- a/report_july_29_2014.html
+++ b/report_july_29_2014.html
@@ -790,7 +790,7 @@ body .task-list{
 
 <ul>
 <li>
-<p>Graph: Categorization By <strong>Change Request By Day</strong> (number_of_change_request_by_day_number_of_change_request_by_day_passed_failed..xsls)</p>
+<p>Graph: Categorization By <strong>Change Request By Day</strong> (number_of_change_request_by_day_passed_failed.xsls)</p>
 
 <ul>
 <li>Total passing and failing change requests by day</li>
@@ -910,7 +910,7 @@ body .task-list{
   <span class="n">mapped_id</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="k">lambda</span><span class="p">:</span> <span class="s">""</span><span class="p">)</span> 
   <span class="n">idx</span> <span class="o">=</span> <span class="mi">1</span>
 
-  <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="s">'rb'</span><span class="p">)</span> <span class="k">as</span> <span class="n">csvfile</span><span class="p">:</span>
+  <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="s">'rb'</span><span class="p">)span> <span class="k">as</span> <span class="n">csvfile</span><span class="p">:</span>
     <span class="n">data</span> <span class="o">=</span> <span class="n">csv</span><span class="o">.</span><span class="n">reader</span><span class="p">(</span><span class="n">csvfile</span><span class="p">,</span> <span class="n">delimiter</span><span class="o">=</span><span class="s">','</span><span class="p">)</span> 
     <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">data</span><span class="p">:</span>
       <span class="k">try</span><span class="p">:</span>      
