--- a/report_july_29_2014.html
+++ b/report_july_29_2014.html
@@ -796,7 +796,7 @@ body .task-list{
 <li>Total passing and failing change requests by day</li>
 </ul>
 </li>
-</ul><p><a href="https://camo.githubusercontent.com/5d2f8417a1574bb938580612e173c39d84b2b8a1/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6e756d6265725f6f665f6368616e67655f726571756573745f62795f6461795f706173735f6661696c65642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/5d2f8417a1574bb938580612e173c39d84b2b8a1/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6e756d6265725f6f665f6368616e67655f726571756573745f62795f6461795f706173735f6661696c65642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/number_of_change_request_by_day_pass_failed.jpg" style="max-width:100%;"></a></p>
+</ul><p><a href="https://camo.githubusercontent.com/7f0bca5d789b7c55f5450d4a2ea4ea8496fd1be8/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6e756d6265725f6f665f6368616e67655f726571756573745f62795f6461795f7061737365645f6661696c65642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/7f0bca5d789b7c55f5450d4a2ea4ea8496fd1be8/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6e756d6265725f6f665f6368616e67655f726571756573745f62795f6461795f7061737365645f6661696c65642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/number_of_change_request_by_day_passed_failed.jpg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -910,7 +910,7 @@ body .task-list{
   <span class="n">mapped_id</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="k">lambda</span><span class="p">:</span> <span class="s">""</span><span class="p">)</span> 
   <span class="n">idx</span> <span class="o">=</span> <span class="mi">1</span>
 
-  <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="s">'rb'</span><span class="p">)span> <span class="k">as</span> <span class="n">csvfile</span><span class="p">:</span>
+  <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">argv</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="s">'rb'</span><span class="p">)</span> <span class="k">as</span> <span class="n">csvfile</span><span class="p">:</span>
     <span class="n">data</span> <span class="o">=</span> <span class="n">csv</span><span class="o">.</span><span class="n">reader</span><span class="p">(</span><span class="n">csvfile</span><span class="p">,</span> <span class="n">delimiter</span><span class="o">=</span><span class="s">','</span><span class="p">)</span> 
     <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">data</span><span class="p">:</span>
       <span class="k">try</span><span class="p">:</span>      
