--- a/index.html
+++ b/index.html
@@ -772,4 +772,8 @@ body .task-list{
 
 <h5>
 <a name="user-content-date-july-29-2014--report" class="anchor" href="#date-july-29-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 29, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_29_2014.html" title="july_29_2014">Report</a>
+</h5>
+
+<h5>
+<a name="user-content-date-august-5-2014--report" class="anchor" href="#date-august-5-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> August 5, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_august_5_2014.html" title="august_5_2014">Report</a>
 </h5></body></html>
