--- a/index.html
+++ b/index.html
@@ -820,4 +820,8 @@ body .markdown-body
 
 <h5>
 <a name="user-content-date-september-30-2014--report" class="anchor" href="#date-september-30-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> September 30, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_september_30_2014.html" title="september_30_2014">Report</a>
+</h5>
+
+<h5>
+<a name="user-content-date-october-07-2014--report" class="anchor" href="#date-october-07-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> October 07, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_october_08_2014.html" title="october_07_2014">Report</a>
 </h5></article></body></html>
