--- a/index.html
+++ b/index.html
@@ -789,9 +789,11 @@ body .markdown-body
   margin: 0 4px 0.25em -20px;
   vertical-align: middle;
 }
-</style><title>reports</title></head><body><article class="markdown-body"><p><a href="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/esquared.jpg" style="max-width:100%;"></a></p>
+</style><title>reports</title></head><body><article class="markdown-body"><p><a href="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/esquared.jpg" style="max-width:100%;"></a> </p>
 
-<hr><h2>
+<hr>
+
+<h2>
 <a name="user-content-progress-reports" class="anchor" href="#progress-reports" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress Reports</h2>
 
 <h5>
@@ -820,12 +822,13 @@ body .markdown-body
 
 <h5>
 <a name="user-content-date-september-30-2014--report" class="anchor" href="#date-september-30-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> September 30, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_september_30_2014.html" title="september_30_2014">Report</a>
-<<<<<<< HEAD
 </h5>
 
 <h5>
 <a name="user-content-date-october-07-2014--report" class="anchor" href="#date-october-07-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> October 07, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_october_08_2014.html" title="october_07_2014">Report</a>
-</h5></article></body></html>
-=======
-</h5></article></body></html>
->>>>>>> 9ebc69eb04070f1f2df50e1fe73d98a9b2900783
+</h5>
+
+<h5>
+<a name="user-content-date-october-24-2014--report" class="anchor" href="#date-october-24-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> October 24, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_october_24_2014.html" title="october_24_2014">Report</a>
+</h5>
+</article></body></html>
