--- a/index.html
+++ b/index.html
@@ -789,15 +789,15 @@ body .markdown-body
   margin: 0 4px 0.25em -20px;
   vertical-align: middle;
 }
-</style><title>reports</title></head><body><article class="markdown-body"><p><a href="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/esquared.jpg" style="max-width:100%;"></a> </p>
-
-<hr>
+</style><title>Appendix</title>
+  </head><body><article class="markdown-body">
 
 <h2>
-<a name="user-content-progress-reports" class="anchor" href="#progress-reports" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress Reports</h2>
+<a name="user-content-progress-reports" class="anchor" href="#progress-reports" aria-hidden="true"><span class="octicon octicon-link"></span></a>Online Appendix
+</h2>
 
 <h5>
-<a name="user-content-date-july-1-2014--report" class="anchor" href="#date-july-1-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Report</a>
+<a name="user-content-date-july-1-2014--report" class="anchor" href="#date-july-1-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Summary Report</a>
 </h5>
 
 </article></body></html>
