--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ body .markdown-body
 -->
   
 <h5>
-<a name="user-content-date-july-1-2014--report" class="anchor" href="#date-july-1-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Summary Report</a>
+<a name="user-content-date-july-1-2014--report" class="anchor" href="#date-july-1-2014--report" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":o:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> Report &gt; <a href="http://rrezarta-krasniqi.github.io/report_augut_5_2014.html" title="august_5_2014">Summary Report</a>
 </h5>
 
 </article></body></html>
