--- a/index.html
+++ b/index.html
@@ -803,7 +803,8 @@ body .markdown-body
 <a name="user-content-date-july-1-2014--report" class="anchor" href="#date-july-1-2014--report" aria-hidden="true">
   <span class="octicon octicon-link"></span></a>
  <!-- <img class="emoji" title=":o:" alt=":o:" src=">>" height="20" width="20" align="absmiddle"> -->
-  <ul> <li>Report &gt;</li> </ul><a href="http://rrezarta-krasniqi.github.io/report_august_5_2014.html" title="august_5_2014">Summary Report</a>
+  <ul><li>Report &gt;<a href="http://rrezarta-krasniqi.github.io/report_august_5_2014.html" title="august_5_2014">Summary Report</a>
+  </li></ul>
 </h5>
 
 </article></body></html>
