--- a/awards/awards.html
+++ b/awards/awards.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Rrezarta Krasniqi | Awards </title>
+<link rel="stylesheet" href="../styles.css" type="text/css" />
+<link href="../images/r.k_icon.png" type="image/x-icon" rel="shortcut icon" />
+</head>
 
+<body>
+<div id="wrap">
+  <div class="header">
+    <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
+            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi</a></h1>
+    <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
+    <h3 style="margin-left: -0px;">University of North Texas</h3>
+  </div>
+  <div id="nav">
+    <ul>
+      <li class="selected"><a target="_top" title="home" href="../index.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+      <li class="selected"><a target="_top" title="research" href="../research/current_past_projects.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+      <li class="selected"><a target="_top" title="publications" href="../publications/all_publications.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+      <li class="selected"><a target="_top" title="teaching" href="../teaching/teaching.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+      <li class="selected"><a target="_top" title="awards" href="../awards/awards.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+      <li class="selected"><a target="_top" title="service" href="../service/service.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+      <li class="selected"><a target="_top" title="talks" href="../talks/talks.html"
+              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+              href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
+    </ul>
+  </div>
+  <div class="page item_shrink">
+    <div class="content2">
+      <h3>Awards</h3>
+      <br>
+      <strong><font color="92150F">Research Grants</font></strong><br><br>
+      <ul>
+        <li><em>Doctoral Research Support Grant</em>, The Toulouse Graduate School, University of North Texas (2023</li>
+        <li><em>Women in STEM Grant</em>, Women and Hi Tech (2019)</li>
+      </ul>
+      <strong><font color="92150F">Travel Grants</font></strong><br><br>
+      <ul>
+        <li><em>CSE Travel Grant</em>, UNT Department of Computer Science (2023)</li>
+        <li><em>CENG Travel Grant</em>, The College of Engineering, University of North Texas (2023)</li>
+        <li><em>TGS Travel Grant</em>, The Toulouse Graduate School, University of North Texas (2023)</li>
+        <li><em>GHC Travel Grant</em>, UNT Department of Computer Science and Engineering (2022)</li>
+        <li><em>COMPSAC Travel Grant</em>, UND Department of Computer Science and Engineering (2021)</li>
+        <li><em>CRA-WP Travel Grant</em>, Grad Cohort Workshop on Widening Participation (2021)</li>
+        <li><em>IDEALS Travel Grant</em>, Grad Cohort Workshop (2020)</li>
+        <li><em>CRA-W Travel Grant</em>, Grad Cohort Workshop for Women (2019)</li>
+      </ul>
+      <strong><font color="92150F">Honors and Awards</font></strong><br><br>
+      <ul>
+        <li><em>Tuition Benefit Program Award</em>, University of North Texas (2021-2023)</li>
+        <li><em>College of Engineering Department Award</em>, University of North Texas (2021-2023)</li>
+        <li><em>EECS Rising Stars</em>, Hosted by Georgia Institute of Technology (2023)</li>
+        <li><em>NCWIT Collegiate Award</em> (finalist) (2023)</li>
+        <li><em>Graduate Student Success Award</em>, University of North Texas (2022)</li>
+        <li><em>Invitation to EMSE Journal</em>, SANER'21 Special Issue for Top Papers (2021)</li>
+        <li><em>GHC-Virtual</em>, UNT Department of Computer Science and Engineering (2021)</li>
+        <li><em>3MT Doctoral Competition-People's Choice Award</em>, University of North Texas (2021)</li>
+        <li><em>Excellence Award</em>, Ministry of Science, Education and Technology of Kosovo (2009)</li>
+        <li><em>Certificate of Appreciation</em>, Midwestern State University (2008)</li>
+        <li><em>Outstanding Graduate Woman</em>, Midwestern State University (2008)</li>
+      </ul>
+      <strong><font color="92150F">Scholarships and Fellowships</font></strong><br><br>
+      <ul>
+        <li><em>Graduate Teaching Assistantship</em>, University of North Texas (2021-2024)</li>
+        <li><em>Teaching Fellow Scholarship</em>, University of North Texas (2022-2023)</li>
+        <li><em>Richard Tapia Scholarship</em>, Tapia Conference, Dallas, TX (2023)</li>
+        <li><em>Google Lime Scholarship</em>, Lime Connect and Google (semi-finalist) (2020)</li>
+        <li><em>Graduate Research Assistantship</em>, University of Notre Dame (2017)</li>
+        <li><em>Jenkins and Roy Smith Scholarship</em>, Midwestern State University (2009)</li>
+        <li><em>McCoy School of Engineering Scholarship</em>, Midwestern State University (2008)</li>
+        <li><em>Tom C. White Scholarship</em>, Midwestern State University (2008)</li>
+        <li><em>Graduate Teaching Assistantship</em>, Midwestern State University (2007)</li>
+      </ul>
+    </div>
+    <div class="footer">
+      <p>Copyright © Rrezarta Krasniqi</p>
+    </div>
+  </div>
+</div>
+</body>
+</html>
