--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Rrezarta Krasniqi | Home</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 <link rel="shortcut icon" href="images/r.k_icon.png" title="Rrezarta Krasniqi"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
 <body>
