--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Rrezarta Krasniqi | Home</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 <link rel="shortcut icon" href="images/r.k_icon.png" title="Rrezarta Krasniqi"/>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 </head>
 
 <body>
@@ -57,10 +57,10 @@
       <p class="blocktext">Research Assistant and Teaching Fellow</p>
       <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu </br>
         <strong>Office</strong>: Discovery Park, F288</p>
-      <p class="blocktext"> <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?user=r_Wi0GYAAAAJ&amp;hl=en"> <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -10px; width: 29px; height: 29px;"/></a>  <a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account"> <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;" /></a> <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/Rrezarta-Krasniqi/29449864"> <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -3px; width: 32px; height: 30px;"/></a> <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131"> <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: -1px; width: 28px; height: 28px;" /></a>   <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/Rrezarta_Krasniqi"> <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: -1px; width: 28px;  height: 27.5px;" /></a>   <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi"> <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: -1px; width: 28px; height: 28px;" /></a>  <a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account"> <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 1px; width: 28px; height: 28.5px;" /></a> </p>
+      <p class="blocktext"> <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?user=r_Wi0GYAAAAJ&amp;hl=en"> <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -10px; width: 29px; height: 29px;"/></a>? <a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account"> <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;" /></a> <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/Rrezarta-Krasniqi/29449864"> <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -3px; width: 32px; height: 30px;"/></a> <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131"> <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: -1px; width: 28px; height: 28px;" /></a>?? <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/Rrezarta_Krasniqi"> <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: -1px; width: 28px;  height: 27.5px;" /></a>?? <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi"> <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: -1px; width: 28px; height: 28px;" /></a>? <a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account"> <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 1px; width: 28px; height: 28.5px;" /></a> </p>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright ? Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
