--- a/awards/awards.html
+++ b/awards/awards.html
@@ -82,7 +82,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
