--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -54,7 +54,7 @@
 		
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
