--- a/research/current_past_projects.html
+++ b/research/current_past_projects.html
@@ -94,7 +94,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
