--- a/research/current_projects/bug_report_qual_classifier.html
+++ b/research/current_projects/bug_report_qual_classifier.html
@@ -97,7 +97,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
