--- a/research/current_projects/quality_concern_bug_report_classifier_tool_journal_extension.html
+++ b/research/current_projects/quality_concern_bug_report_classifier_tool_journal_extension.html
@@ -113,7 +113,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
