--- a/research/past_projects/enhancing_refactoring_explanations_project.html
+++ b/research/past_projects/enhancing_refactoring_explanations_project.html
@@ -96,7 +96,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
