--- a/research/past_projects/retro_rank_tool.html
+++ b/research/past_projects/retro_rank_tool.html
@@ -105,7 +105,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
