--- a/talks/talks.html
+++ b/talks/talks.html
@@ -103,7 +103,7 @@
       
     </div>
     <div class="footer">
-      <p>Copyright © Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
