--- a/index.html
+++ b/index.html
@@ -48,21 +48,44 @@
       <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering  undergraduate and graduate-level courses. I also worked as a software developer for over three years, contributing to the development of various web-based Java applications. Additionally, I used advanced Oracle technologies to create and implement SQL-based reports.</p>
       <p>I hold a B.S. degree in Computer Science and Mathematics from the University of Prishtina (Kosovo) and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
     </div>
+
     <div class="sidebar">
-      <div class="title">
-        <h4 align="center">Contact Information</h4>
-      </div>
-      <p class="blocktext"> <a href="index.html" title="Rrezarta Krasniqi"> <img src="images/RrezartaHeadShot_200x200_new.png" 
-            alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
-      <p class="blocktext">Research Assistant and Teaching Fellow</p>
-      <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu </br>
+
+      <div class="title"><h4 align="center">Contact Information</h4></div>
+
+      <p class="blocktext"> 
+
+        <a href="index.html" title="Rrezarta Krasniqi"> <img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
+        <p class="blocktext">Research Assistant and Teaching Fellow</p>
+        <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu </br>
         <strong>Office</strong>: Discovery Park, F288</p>
-      <p class="blocktext"><a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?user=r_Wi0GYAAAAJ&amp;hl=en"><img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -10px; width: 29px; height: 29px;"/></a>&nbsp;&nbsp;<a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account"><img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;" /></a><a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/Rrezarta-Krasniqi/29449864"><img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -3px; width: 32px; height: 30px;"/></a> <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131"><img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: 0px; width: 28px; height: 28px;" /></a><a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/Rrezarta_Krasniqi"><img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 9px; width: 28px;  height: 27.5px;" /></a><a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi"><img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;" /></a>&nbsp;<a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account"><img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 6px; width: 28px; height: 28.5px;" /></a> </p>
+     
+      <p class="blocktext">
+        <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?hl=en&user=r_Wi0GYAAAAJ&view_op=list_works&sortby=pubdate">
+        <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -10px; width: 29px; height: 29px;"/></a> 
+
+        <a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account">
+        <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;"/></a>
+
+        <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/Rrezarta-Krasniqi/29449864">
+        <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -3px; width: 32px; height: 30px;"/></a> 
+
+       <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131">
+        <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: 0px; width: 28px; height: 28px;"/></a>
+
+        <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/Rrezarta_Krasniqi">
+        <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 9px; width: 28px;  height: 27.5px;" /></a>
+
+        <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi">
+        <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;" /></a>
+
+        <a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account">
+        <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 6px; width: 28px; height: 28.5px;" /></a> </p>
+      </div>
+     <div class="footer">
+     <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
-    <div class="footer">
-      <p>Copyright &copy; Rrezarta Krasniqi</p>
-    </div>
+   </div>
   </div>
-</div>
 </body>
 </html>
