--- a/awards/awards.html
+++ b/awards/awards.html
@@ -4,6 +4,7 @@
 <title>Rrezarta Krasniqi | Awards </title>
 <link rel="stylesheet" href="../styles.css" type="text/css"/>
 <link href="../images/r.k_icon.png" type="image/x-icon" rel="shortcut icon"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
