--- a/index.html
+++ b/index.html
@@ -19,18 +19,25 @@
     <ul>
       <li class="selected"><a target="_top" title="home" href="index.html" onmouseout="this.style.color='#92150F'"
               onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+		
       <li class="selected"><a target="_top" title="research" href="research/current_past_projects.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+		
       <li class="selected"><a target="_top" title="publications" href="publications/all_publications.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+		
       <li class="selected"><a target="_top" title="teaching" href="teaching/teaching.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+		
       <li class="selected"><a target="_top" title="awards" href="awards/awards.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+		
       <li class="selected"><a target="_top" title="service" href="service/service.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+		
       <li class="selected"><a target="_top" title="talks" href="talks/talks.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+		
       <li class="selected"><a target="_blank" title="Rrezarta Krasniqi-CV" href="cv/krasniqi_cv.pdf"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
     </ul>
@@ -38,7 +45,7 @@
   <div class="page">
     <div class="content">
       <h3>Home</h3>
-      <br />
+      <br>
       <p>I am a Ph.D candidate in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
 		
       <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools to enhance and contextualize the understanding of complex quality issues that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective strategies for improving software quality. <!--You can learn more by reading my dissertation or watching my dissertation talk.--> 
@@ -57,7 +64,7 @@
 
         <a href="index.html" title="Rrezarta Krasniqi"> <img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
         <p class="blocktext">Research Assistant and Teaching Fellow</p>
-        <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu </br>
+        <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu<br>
         <strong>Office</strong>: Discovery Park, F288</p>
      
       <p class="blocktext">
@@ -77,10 +84,11 @@
         <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 9px; width: 28px;  height: 27.5px;" /></a>
 
         <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi">
-        <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;" /></a>
+        <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;"/></a>
 
         <a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account">
-        <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;" /></a> </p>
+        <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;"/></a></p>
+	
       </div>
      <div class="footer">
      <p>Copyright &copy; Rrezarta Krasniqi</p>
