--- a/service/service.html
+++ b/service/service.html
@@ -36,17 +36,18 @@
   </div>
   <div class="page item_shrink">
     <div class="content2">
-      <h3>Service</h3>
-      <br>
-      <strong><font color="92150F">Invited Journal Reviewer</font></strong><br>
-      <br>
+      <h3>Service</h3><br>
+		
+      <strong><font color="92150F">Invited Journal Reviewer</font></strong><br><br>
+		
       <ul>
         <li><em>Reviewer</em>, Software Quality Journal (SQJ'23)</li>
         <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP'23)</li>
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability (JSTVR'22)</li>
       </ul>
-      <strong><font color="92150F">Invited Program Committee</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Invited Program Committee</font></strong><br><br>
+		
       <ul>
         <li><em>PC Member</em>, International Conference on Software Engineering (ICSE'24)</li>
         <li><em>PC Member</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23)</li>
@@ -54,27 +55,31 @@
         <li><em>PC Member</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22, MOBILESoft'23)</li>
         <li><em>PC Member</em>, International Conference on Mining Software Repositories (MSR'22, MSR'23)</li>
       </ul>
-      <strong><font color="92150F">Invited Organizing Committee</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Invited Organizing Committee</font></strong><br><br>
+		
       <ul>
         <li><em>Session Chair</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23)</li>
         <li><em>Virtualization Chair</em>, International Conference on Automated Software Test (AST'22)</li>
       </ul>
-      <strong><font color="92150F">Invited External Review Committee</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Invited External Review Committee</font></strong><br><br>
+		
       <ul>
         <li><em>Reviewer</em>, NCWIT Aspirations in Computing (AiC) (NCWIT'23)</li>
         <li><em>Reviewer</em>, International Conference on Requirement Engineering (RE'20)</li>
         <li><em>Reviewer</em>, Graduate Women in Science National Fellowship (GWIS) (2020-2022)</li>
       </ul>
-      <strong><font color="92150F">Invited Student Volunteer</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Invited Student Volunteer</font></strong><br><br>
+		
       <ul>
         <li><em>Student Volunteer</em>, International Conference on Software Architecture (ICSA'22)</li>
         <li><em>Student Volunteer Chair</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'21)</li>
       </ul>
-      <strong><font color="92150F">Outreach and Leadership</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Outreach and Leadership</font></strong><br><br>
+		
       <ul>
         <li><em>Student Volunteer</em>, Texas CSTA Chapters Conference and Digital Divas, UNT (2021-2023)</li>
         <li><em>Activity Instructor</em>, Design Your World STEM Conference for Girls, SWE-Dallas (2021-2023)</li>
@@ -82,20 +87,23 @@
         <li><em>STEM Mentor</em>, Association for Women in Science (AWIS-UND) (2017-2021)</li>
         <li><em>STEM Volunteer</em>, Math, Science and U Junior High School Conference for Girls (MWSU) (2007-2009)</li>
       </ul>
-      <strong><font color="92150F">Professional Memberships</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Professional Memberships</font></strong><br><br>
+		
       <ul>
         <li>Institute of Electrical and Electronics Engineers (IEEE)</li>
         <li>Association for Computing Machinery (ACM)</li>
       </ul>
-      <strong><font color="92150F">Academic Memberships</font></strong><br>
-      <br>
+		
+      <strong><font color="92150F">Academic Memberships</font></strong><br><br>
+		
       <ul>
         <li>Society of Women Engineers (SWE-UNT)</li>
         <li>Society of Women Engineers (SWE-UND)</li>
         <li>Association for Women in Science (AWIS)</li>
         <li>Women and Hi Tech</li>
       </ul>
+		
     </div>
     <div class="footer">
       <p>Copyright © Rrezarta Krasniqi</p>
