--- a/awards/awards.html
+++ b/awards/awards.html
@@ -19,26 +19,33 @@
     <ul>
       <li class="selected"><a target="_top" title="home" href="../index.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+		
       <li class="selected"><a target="_top" title="research" href="../research/current_past_projects.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+		
       <li class="selected"><a target="_top" title="publications" href="../publications/all_publications.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+		
       <li class="selected"><a target="_top" title="teaching" href="../teaching/teaching.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+		
       <li class="selected"><a target="_top" title="awards" href="../awards/awards.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+		
       <li class="selected"><a target="_top" title="service" href="../service/service.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+		
       <li class="selected"><a target="_top" title="talks" href="../talks/talks.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+		
       <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
   <div class="page item_shrink">
     <div class="content2">
-      <h3>Awards</h3>
-      <br>
+		
+      <h3>Awards</h3><br>
 		
       <strong><font color="92150F">Research Grants</font></strong><br><br>
 		
