--- a/talks/talks.html
+++ b/talks/talks.html
@@ -19,72 +19,97 @@
     <ul>
       <li class="selected"><a target="_top" title="home" href="../index.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+		
       <li class="selected"><a target="_top" title="research" href="../research/current_past_projects.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+		
       <li class="selected"><a target="_top" title="publications" href="../publications/all_publications.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+		
       <li class="selected"><a target="_top" title="teaching" href="../teaching/teaching.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+		
       <li class="selected"><a target="_top" title="awards" href="../awards/awards.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+		
       <li class="selected"><a target="_top" title="service" href="../service/service.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+		
       <li class="selected"><a target="_top" title="talks" href="../talks/talks.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+		
       <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
   <div class="page">
     <div class="content2">
-      <h3>Talks</h3>
-      <br>
+		
+      <h3>Talks</h3><br>
+		
       <p class="border">"A Hierarchical Topical Modeling Approach for Recommending Repair of Quality Bugs"</p>
       &nbsp; &#9657; Presented at the 30<sup>th</sup> IEEE International Conference on Software Analysis, Evolution and Reengineering (<a target="_blank" title="SANER'23" href="https://saner2023.must.edu.mo/index">SANER'23</a>), March 23<sup>rd</sup>, Macao, China, 2023<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-SANER'23" href="https://drive.google.com/file/d/1b0tXkutNQkLpCoQSBn6gJTLyrX0ZGlKI/view?usp=share_link">[Presentation Slides]</a>
+		
       <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/7S_CLPdq21s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
       </center>
+		
       <br>
       <br>
+		
       <p class="border">"Generalizability of NLP-based Models for Modern Software Development Cross-Domain Environments"</p>
       &nbsp; &#9657; Presented at 2<sup>nd</sup> International Workshop on Natural Language-based Software Engineering (<a target="_blank" title="Talk-NLBSE'23" href="https://nlbse2023.github.io/program/">NLBSE'23</a>), May 20<sup>th</sup>, Melbourne, Australia, 2023<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-NLBSE'23" href="https://drive.google.com/file/d/1VIMKbfN7jgJtCKVQdM7-GfvDCp8rBb4F/view?usp=sharing">[Presentation Slides]</a>
+		
       <center>
         <iframe  width="560" height="315" src="https://www.youtube.com/embed/aVMbTUrtDY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
       </center>
+		
       <br>
       <br>
+		
       <p class="border">"Automatically Capturing Quality-Related Concerns in Bug Report Descriptions for Efficient Bug Triaging"</p>
       &nbsp; &#9657; Presented at the 30<sup>th</sup> IEEE International Conference on Software Analysis, Evolution and Reengineering (<a target="_blank" title="EASE'22" href="https://conf.researchr.org/home/ease-2022">EASE'22</a>), June 15<sup>th</sup>, Gothenburg, Sweden, 2022<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-EASE'22" href="https://drive.google.com/file/d/1YD8LrqGFquPnWpGKIHeBmPp5or6bAd2e/view?usp=sharing">[Presentation Slides]</a>
+		
       <center>
         <iframe width="560" height="315" frameborder="0" src="https://www.youtube.com/embed/4YWgtDQ3UqU" title="YouTube video player" allow="accelerometer; autoplay; fullscreen; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
       </center>
+		
       <br>
       <br>
+		
       <p class="border">"Recommending Bug-fixing Comments from Issue Discussions in Support of Bug Repair"</p>
       &nbsp; &nbsp;&#9657; Presented at the 45<sup>th</sup> IEEE Annual Computers, Software, and Applications Conference, (<a target="_blank" title="COMPSAC'21" href="https://ieeecompsac.computer.org/2021/">COMPSAC'22</a>), July 15<sup>th</sup>, Madrid, Spain, 2021<br>
       &nbsp; &nbsp;&#9657; <a target="_blank" title="Talk-COMPSAC'21" href="https://drive.google.com/file/d/1KjVWNxJaWC7geCC_b0gTwJnZ-sgI0uyf/view?usp=sharing">[Presentation Slides]</a>
+		
       <center>
         <iframe width="560" height="315" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" src="https://www.youtube.com/embed/VCX9ndrrhdQ"> </iframe>
       </center>
+		
       <br>
       <br>
+		
       <p class="border">"Extractive Summarization of Related Bug-fixing Comments in Support of Bug Repair"</p>
       &nbsp; &#9657; Presented at the 2<sup>nd</sup> International Workshop on Automated Program Repair (<a target="_blank" title="APR'21" href="https://program-repair.org/workshop-2021/">APR'22</a>), June 1<sup>st</sup>, Madrid, Spain, 2021<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-APR'21" href="https://drive.google.com/file/d/1RKeHZM9DI4jEaHmXYD1XDnRRfFJMCwV1/view?usp=sharing">[Presentation Slides]</a>
+		
       <center>
         <iframe width="560" height="315" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" src="https://www.youtube.com/embed/7G34NVy4HnM"> </iframe>
       </center>
+		
       <br>
       <br>
+		
       <p class="border">"Analyzing and Detecting Emerging Quality-Related Concerns across OSS Defect Reports"</p>
       &nbsp; &#9657; Presented at the 28<sup>th</sup> IEEE International Conference on Software Analysis, Evolution and Reengineering, (<a target="_blank" title="SANER'21" href="https://saner2021.shidler.hawaii.edu/">SANER'21</a>), March 10<sup>th</sup>, Honolulu, HI, 2021<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-APR'21" href="https://drive.google.com/file/d/1wKTlVE-yrPTfCyU5rkAxV6_1s44-EN50/view?usp=sharing">[Presentation Slides]</a>
+		
       <center>
         <iframe width="560" height="315" frameborder="0" src="https://www.youtube-nocookie.com/embed/urosa5s_PtA?start=2" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> </iframe>
       </center>
+		
       <br>
       <br>
       
