--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
   </div>
   <div class="page">
     <div class="content">
-      <h3>Home</h3>
-      <br>
+		
+      <h3>Home</h3><br>
+		
       <p>I am a Ph.D candidate in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
 		
       <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools to enhance and contextualize the understanding of complex quality issues that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective strategies for improving software quality. <!--You can learn more by reading my dissertation or watching my dissertation talk.--> 
@@ -60,9 +61,8 @@
 
       <div class="title"><h4 align="center">Contact Information</h4></div>
 
-      <p class="blocktext"> 
-
-        <a href="index.html" title="Rrezarta Krasniqi"> <img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
+        <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
+			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
         <p class="blocktext">Research Assistant and Teaching Fellow</p>
         <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu<br>
         <strong>Office</strong>: Discovery Park, F288</p>
