--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -70,7 +70,7 @@
               <p class="border"><strong><i>Course Description.</i></strong> 
 				  This course provides a strong foundation in the principles,
                 practices, and methodologies of database security and
-                auditing as well as their impact on the design of today’s
+                auditing as well as their impact on the design of today's
                 information systems. Introduces the security challenges and
                 threats in databases systems and provides an understanding
                 of current security technologies. Topics include database
