--- a/research/past_projects/tracelab_project.html
+++ b/research/past_projects/tracelab_project.html
@@ -92,7 +92,7 @@
         expressed as verbal actions to achieve a specific task. A typical
         expression of speech act is the following example: <em>I've just
         made some tea</em>. As a result, the speech does more than
-        stating a fact — it has a <strong>consequence</strong>. This
+        stating a fact &#8212; it has a <strong>consequence</strong>. This
         example may imply <em>to invite</em> or <em>to offer</em>.
         In recent work published at FSE'2018, we presented a multi-label
         classification technique that aims at detecting speech act types
