--- a/awards/awards.html
+++ b/awards/awards.html
@@ -72,7 +72,7 @@
       <ul>
         <li><em>Tuition Benefit Program Award</em>, University of North Texas (2021-2023)</li>
         <li><em>College of Engineering Department Award</em>, University of North Texas (2021-2023)</li>
-        <li><em>EECS Rising Stars</em>, Hosted by Georgia Institute of Technology (2023)</li>
+        <!--<li><em>EECS Rising Stars</em>, Hosted by Georgia Institute of Technology (2023)</li>-->
         <li><em>NCWIT Collegiate Award</em> (finalist) (2023)</li>
         <li><em>Graduate Student Success Award</em>, University of North Texas (2022)</li>
         <li><em>Invitation to EMSE Journal</em>, SANER'21 Special Issue for Top Papers (2021)</li>
