--- a/service/service.html
+++ b/service/service.html
@@ -58,6 +58,7 @@
 		
       <ul>
         <li><em>PC Member</em>, International Conference on Software Engineering (ICSE'24)</li>
+		<li><em>PC Member</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
         <li><em>PC Member</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23)</li>
         <li><em>PC Member</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23)</li>
         <li><em>PC Member</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22, MOBILESoft'23)</li>
