--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
       Meanwhile, I actively engage in projects centered around code summarization techniques that aim to provide a holistic understanding of functional aspects of software systems.</p>
 		
-      <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering  undergraduate and graduate-level courses. I also worked as a software developer for over three years, contributing to the development of various web-based Java applications. Additionally, I used advanced Oracle technologies to create and implement SQL-based reports.</p>
+      <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a software developer for over three years, contributing to the development of various web-based Java applications. Additionally, I used advanced Oracle technologies to create complex SQL-based reports for a large enterprise resource planning project.</p>
       <p>I hold a B.S. degree in Computer Science and Mathematics from the University of Prishtina (Kosovo) and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
     </div>
 
